# discord-bot-hello-world

./: Dockerfile  LICENSE  pyproject.toml
.github/workflows/: deploy.yml
bot/: __main__.py  commands.py  config.py  core.py  img_api.py
